<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textColor="@color/mine"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/join"
            android:textColor="@color/ash"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/user"
            android:drawableLeft="@drawable/user"
            android:drawableStart="@drawable/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:ems="15"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/mail"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:ems="15"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/pass"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:drawableLeft="@drawable/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:ems="15"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_border"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:shadowColor="@color/black"
            android:text="@string/btnSignup"
            android:textColor="@color/mine" />

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="300dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/login"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/google_signin"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:shadowColor="@color/black"
                android:icon="@drawable/lock"
                android:text="@string/google"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,ObsoleteLayoutParam" />

            <Button
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/login"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/facebook_signin"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:shadowColor="@color/black"
                android:text="@string/facebook"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,InefficientWeight,ObsoleteLayoutParam" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>