<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mine"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="230dp"
            android:background="@drawable/signup_button_border"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:shadowColor="@color/black"
            android:text="@string/btnSignup"
            android:textColor="@color/white"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@id/btnSign"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_border"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:shadowColor="@color/black"
            android:text="@string/btnLogin"
            android:textColor="@color/mine"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>

</ScrollView>